# pt2-re

./: Cargo.toml  build.rs  build.sh  run.cmd
assets/images/fonts/: SofiaSansExtraCondensed.fnt
assets/tables/: language_music.csv  level.csv  music_json.csv
docs/: soundfont_implementation_summary.md  soundfont_integration_design.md  soundfont_test_plan.md  worklog.md
shaders/: font.wgsl  sprite.wgsl  tile.wgsl
src/: lib.rs  main.rs  tsf_bindings.rs  video_recorder.rs
src/game/: audio_manager.rs  game_controller.rs  game_state.rs  input_handler.rs  json_level_reader.rs  midi_types.rs  mod.rs  note_indicator.rs  row_generator.rs  score_manager.rs  score_types.rs  soundfont_manager.rs  types.rs
src/renderer/: bitmap_font_parser.rs  bitmap_font_renderer.rs  gpu_context.rs  mod.rs  renderer.rs  score_renderer.rs  sprite_renderer.rs  spritesheet_parser.rs  tile_renderer.rs
