[package]
name = "pt2"
version = "0.0.0"
edition = "2024"
description = "A FOSS Piano Tiles 2 clone"

[features]
default = []
audio = ["dep:rodio"]
soundfont = ["audio"]

[dependencies]
wgpu = "24"
winit = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
regex-lite = "0.1"
rodio = { version = "0.20", optional = true, features = ["mp3"] }

[build-dependencies]
bindgen = "0.72.1"
cc = "1"
